// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";

package helloworld;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
  repeated int64 data1 = 2;
  repeated DocumentType data2 = 3;
}

// The response message containing the greetings
message HelloReply {
  repeated DocumentType data5 = 1;
  repeated int64 data6 = 2;
  string message = 3;
  uint32 tag = 4;
  repeated uint32 data1 = 5;
  repeated string data2 = 6;
  map<string, uint32> data3 = 7;
  DocumentType data4 = 8;
}

enum DocumentType {
    BROKER = 0;
    NAMESPACE = 1;
    TOPIC_SPACE = 2;
    CERTIFICATE_LIST = 3;
    PERMISSION_BINDING_LIST = 4;
    CLIENT_GROUP_LIST = 5;
    QUOTA = 6;
}
